# ppcar-be

./: .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/blacar/: db.sqlite3  manage.py
backend/blacar/api/: router.py  urls.py  wsgi.py
backend/blacar/api/views/: trips.py
backend/blacar/blacar/: asgi.py  settings.py  urls.py
backend/blacar/startup/: models.py
backend/blacar/startup/accounts/: models.py
backend/blacar/startup/shared/: events.py  filters.py  models.py  repository.py
blacar/admin_site/: admin.py
blacar/api/: urls.py
blacar/api/accounts/: router.py  urls.py  views.py
blacar/api/auth/: adapters.py  serializers.py  urls.py  views.py
blacar/blacar/: settings.py  urls.py
blacar/startup/: models.py
blacar/startup/accounts/: adapters.py  features.py  managers.py  models.py  repository.py
blacar/startup/migrations/: 0001_initial.py  0002_alter_user_managers.py
blacar/startup/shared/: exceptions.py  images.py  modules.py  repository.py  transactions.py
documents/blacar_v2_class_analysis_diagram/: BlacarV2AnalysisDiagram.mdj
